# rust-start

./: .yamllint  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: pull_request.yml  push_main.yml
docker/prometheus/: prometheus.yml
src/: main.rs
src/config/: mod.rs
src/log/: mod.rs
src/metrics/: mod.rs
src/routes/: mod.rs
