[package]
name = "rust-start"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["json"] }
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
prometheus = "0.13.4"
gethostname = "0.4.3"
tracing = "0.1.40"
lazy_static = "1.4.0"
